Bug 46425 - assert_fail in sna_pixmap_move_area_to_gpu()
Summary: assert_fail in sna_pixmap_move_area_to_gpu()
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-21 19:56 UTC by Joe Nahmias
Modified: 2012-02-22 01:18 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Backtrace while running with --enable-debug showing assert_fail() (4.74 KB, text/plain)
2012-02-21 19:56 UTC, Joe Nahmias
no flags Details
Another backtrace (4.73 KB, text/plain)
2012-02-21 20:26 UTC, Joe Nahmias
no flags Details

Description Joe Nahmias 2012-02-21 19:56:56 UTC
Created attachment 57431 [details]
Backtrace while running with --enable-debug showing assert_fail()

Well, it looks like we closed #46346 a bit prematurely.  I got another assert_fail in sna_pixmap_move_area_to_gpu().  Backtrace is attached.

Feel free to merge this with 46346 if that's how you'd like me to handle it in the future.

Thanks,
--Joe
Comment 1 Joe Nahmias 2012-02-21 20:26:59 UTC
Created attachment 57432 [details]
Another backtrace

Here's another backtrace showing a similar (to me) assert_fail.
Comment 2 Chris Wilson 2012-02-22 01:11:42 UTC
It is a subtly different assertion failure. On reflection, it looks like I relaxed an invariant that the assertion is checking...
Comment 3 Chris Wilson 2012-02-22 01:18:08 UTC
commit b02f866d67d60538368619849f2acda4c1706476
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Wed Feb 22 09:15:25 2012 +0000

    sna: Ensure we restore the shadow pixels before uploading CPU data
    
    Reported-by: Joe Nahmias <joe@nahmias.net>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=46425
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

Next! ;)


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.