sna: Ensure we restore the shadow pixels before uploading CPU data

Reported-by: Joe Nahmias <joe@nahmias.net>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=46425
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>